bug fix: carousel page headline gap

--- a/carousel.css
+++ b/carousel.css
@@ -1,11 +1,14 @@
-.wrapper {
+.article-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
   .headline {
     display: flex;
     flex-direction: column;
     justify-content: start;
     width: 100%;
     height: auto;
-    gap: 24px;
 
     .headline-text {
       display: flex;
@@ -52,60 +55,61 @@
     }
   }
 
-  .author-card {
-    width: 100%;
-    height: auto;
-    background-color: rgba(78, 164, 135, 0.2);
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    padding: 16px 8px;
 
-    .ac-intro {
+    .author-card {
+      width: 100%;
+      height: auto;
+      background-color: rgba(78, 164, 135, 0.2);
+      border-radius: 30px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 16px;
-    }
-    img {
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-top: 20px;
-    }
+      gap: 8px;
+      padding: 16px 8px;
 
-    .ac-title {
-      font-weight: 400;
-      color: rgba(84, 55, 13, 1);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      h4 {
-        font-family: "Arima";
-        font-weight: 700;
-        font-size: 1rem;
-        line-height: 120%;
+      .ac-intro {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+      }
+      img {
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-top: 20px;
       }
 
-      p {
-        font-family: "Arima";
+      .ac-title {
         font-weight: 400;
+        color: rgba(84, 55, 13, 1);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h4 {
+          font-family: "Arima";
+          font-weight: 700;
+          font-size: 1rem;
+          line-height: 120%;
+        }
+
+        p {
+          font-family: "Arima";
+          font-weight: 400;
+          font-size: 1rem;
+          line-height: 120%;
+        }
+      }
+      .ac-text p {
+        font-weight: 400;
+        color: rgba(84, 55, 13, 1);
         font-size: 1rem;
         line-height: 120%;
+        text-align: center;
       }
-    }
-    .ac-text p {
-      font-weight: 400;
-      color: rgba(84, 55, 13, 1);
-      font-size: 1rem;
-      line-height: 120%;
-      text-align: center;
     }
   }
-}
